# dig

./: .coderabbit.yaml  AGENTS.md  COPYRIGHT  Cargo.toml  README.md  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-automerge.yml  dependency-audit.yml  release.yml  sonarcloud.yml
src/cli/: branch.rs  clean.rs  commit.rs  init.rs  mod.rs  tree.rs
src/cli/adopt/: mod.rs
src/cli/branch/: mod.rs
src/cli/clean/: mod.rs  render.rs
src/cli/commit/: mod.rs
src/cli/merge/: mod.rs
src/cli/operation/: mod.rs
src/cli/orphan/: mod.rs
src/cli/pr/: mod.rs
src/cli/reparent/: mod.rs
src/cli/switch/: interactive.rs  mod.rs
src/cli/sync/: mod.rs  render.rs
src/cli/tree/: mod.rs  render.rs  rows.rs
src/core/: adopt.rs  branch.rs  clean.rs  commit.rs  deleted_local.rs  gh.rs  git.rs  graph.rs  init.rs  mod.rs  pr.rs  restack.rs  switch.rs  sync.rs  test_support.rs  tree.rs  workflow.rs
src/core/clean/: apply.rs  mod.rs  plan.rs  tests.rs  types.rs
src/core/merge/: apply.rs  mod.rs  tests.rs
src/core/orphan/: apply.rs  mod.rs  plan.rs  tests.rs  types.rs
src/core/reparent/: apply.rs  mod.rs  plan.rs  tests.rs  types.rs
src/core/store/: bootstrap.rs  config.rs  events.rs  fs.rs  lock.rs  migrate.rs  mod.rs  mutations.rs  operation.rs  session.rs  state.rs  types.rs
src/ui/: markers.rs  palette.rs
tests/: adopt.rs  branch.rs  clean.rs  commit.rs  orphan.rs  pause_guard.rs  pr.rs  reparent.rs  switch.rs  sync.rs  tree.rs
tests/support/: mod.rs
