[package]
name = "dagger"
version = "0.2.0"
edition = "2024"
license = "GPL-3.0-or-later"

[[bin]]
name = "dgr"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.48.0", features = ["rt", "sync", "time"] }
uuid = { version = "1.22.0", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
